# Job-Market-Skill-Demand-Predictor

./: .env  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  train_output.txt  train_output_balanced.txt
.github/workflows/: ci.yml
code/: app.py  modeling.py  predict.py  preprocessing.py
code/scraper/: augment.py  deduplicate.py  engine.py  linkedin.py  remotive.py  wwr.py
code/src/: preprocessing.py  train.py
data/: evaluation_metrics.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  PredictionForm.jsx
frontend/src/services/: api.js
mlruns/1/9203c60e64354ecaaaf89243a33a18db/artifacts/: confusion_matrix.json
mlruns/1/ffe92ea962884d1b8d2d0324380361c6/artifacts/: confusion_matrix.json
mlruns/1/models/m-1409730eb27b45619d64372a206a8ff6/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml
mlruns/1/models/m-ec9ee8b4cf3e4b9f82156710ae457cdd/artifacts/: MLmodel  model.pkl  requirements.txt
models/: salary_model.joblib  tag_binarizer.joblib  threshold.json  title_tfidf.joblib
tests/: test_api.py
