[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scikit-learn-intelex>=2025.11.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
