[project]
name = "ml-project"
version = "0.1.0"
description = "Phase 3 Model Training with MLflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.1",
    "xgboost>=2.0.3",
    "mlflow>=2.11.3",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.3.2",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "setuptools>=69.1.1",
    "packaging>=23.2",
    "protobuf==4.25.3",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
